Fix sketchfab icon issue on mobile layout

--- a/assets/styles/index.styl
+++ b/assets/styles/index.styl
@@ -3,69 +3,5 @@
 @import "fonts"
 @import "social"
 @import "colors"
-
-html, body
-  font-family: 'budalight'
-  font-size: 16px
-  color: $dark-blue * 0.4
-  background: url(/images/cream-pixels.png) $light-blue * 1.2 
-  height: 100%
-
-h1, h2, h3
-  font-family: 'annie_use_your_telescopeRg'
-
-h1
-  font-size: 4em
-
-h2
-  font-size: 2.6em
-
-p
-  font-size: 1.4em
-
-.vertical
-  display: table-cell
-  text-align: center
-  vertical-align: middle
-
-.wrapper
-  height: 100%
-  .logo
-    height: 100%
-    column(1/2, gutter: 0)
-    text-align: center
-    display: table
-    img
-      width: 80%
-  .profile
-    height: 100%
-    column(1/2, gutter: 0)
-    text-align center
-    background: url(/images/cream-pixels.png) $dark-blue
-    height: 100%
-    display: table
-    .avatar
-      img, h1
-        margin-bottom: 5%
-      img
-        border: 0.4em solid $dark-blue * 0.4
-        border-radius: 0.8em
-
-@media (orientation: portrait)
-  .wrapper
-    .logo
-      column(1, gutter: 0)
-    .profile
-      height: 100%
-      column(1, gutter: 0)
-
-@media (min-width: 320px) and (max-width: 720px)
-  body, html
-    font-size: 10px
-  .soc
-    li
-      a
-        width 40px
-        height 40px
-        font-size 22px
-        line-height 40px
+@import "layout"
+@import "responsive"
